# ghostprovider

./: .SRCINFO  .gitignore  PKGBUILD  README.md  check_syntax.py  ghostprovider.sh  pyproject.toml
docs/: index.html
ghostprovider/: __init__.py  __main__.py  analyzer.py  app.py  app.py.save  app.py.save.1  hoster.py  installer.py  screens.py  services.py  state.py
tests/: test_analysis.py
